change path resources

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <section class="videos">
             <div class="contenedorVideo">
                 <video autoplay="autoplay" loop="loop" id="video_background" preload="auto" volume="0" />
-                <source src="../assets/videoFondo.mp4" type="video/mp4" />
+                <source src="./assets/videoFondo.mp4" type="video/mp4" />
                 </video>
                 <div class="va-carrousel-section">
                     <div class="va-whitewrap">
