--- a/sobreMi.html
+++ b/sobreMi.html
@@ -79,9 +79,9 @@
         </div>
 
         <div class="titulos">
-            <img src="../assets/Titulo-cine-300x218.jpg" alt="" srcset="">
-            <img src="../assets/Master-en-Marketing-300x207.jpg" alt="" srcset="">
-            <img src="../assets/Marketing-por-la-Universidad-de-davis-1-300x232.jpg" alt="" srcset="">
+            <img src="./assets/Titulo-cine-300x218.jpg" alt="" srcset="">
+            <img src="./assets/Master-en-Marketing-300x207.jpg" alt="" srcset="">
+            <img src="./assets/Marketing-por-la-Universidad-de-davis-1-300x232.jpg" alt="" srcset="">
         </div>
     </main>
 
