--- a/contacto.html
+++ b/contacto.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+   
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/contacto.css">
 </head>
@@ -75,18 +77,17 @@
         </div>
         <div class="follow">
             <h2>Follow <span>Us</span></h2>
-            <div class="redSocial"> <i class='bx bxl-instagram'></i>
-                <p>INSTAGRAM</p>
+            <div class="redSocial" > <i class='bx bxl-instagram'></i>
+                <p><a href="https://www.instagram.com/Mr_.ibarra" target="_blank">INSTAGRAM</a></p>
             </div>
-            <div class="redSocial"><i class='bx bxl-vimeo'></i>
-                <p>VIMEO</p>
+            <div class="redSocial" ><i class='bx bxl-vimeo'></i>
+                <p><a href="https://vimeo.com/carlosibarrapro" target="_blank">VIMEO</a></p>
             </div>
-            <div class="redSocial"><i class='bx bxl-linkedin-square'></i>
-                <p>LINKEDIN</p>
+            <div class="redSocial" ><i class='bx bxl-linkedin-square'></i>
+                <p><a href="https://www.linkedin.com/in/carlosibarrapro/" target="_blank">LINKEDIN</a></p>
             </div>
         </div>
-        <img class="flores" src="./assets/svgContact.svg" alt="" srcset="">
-        <img class="girl" src="./assets/svgContact2.svg" alt="" srcset="">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.846823629148!2d2.1573526001642547!3d41.39913278156345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a2964aff9a45%3A0xafaae39e7a7e0dbd!2sCarrer%20de%20Goya%2C%2016%2C%2008012%20Barcelona%2C%20Espa%C3%B1a!5e0!3m2!1ses-419!2sar!4v1655423951428!5m2!1ses-419!2sar" class="map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </main>
 
 
