--- a/fotos.html
+++ b/fotos.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/fotos.css">
@@ -60,7 +61,7 @@
 
 
             <div class="gallery-container" :class="img.h + ' ' + img.w" v-for="img in imagenesHardcodeadas"
-                @click="openFullScreen(img)">
+                @click="openFullScreen(img)" :id="'id'+img.id">
                 <div class="gallery-item">
                     <div class="image">
                         <img :src=img.url alt="Gallery1">
