--- a/videos.html
+++ b/videos.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
     <link rel="stylesheet" href="./styles/navbar.css">
     <link rel="stylesheet" href="./styles/fotos.css">
@@ -53,12 +54,12 @@
         <div class="fondoModal ">
             <div class="bodyModal">
                 <span @click="openFullVideo">X</span>
-                <iframe title="vimeo-player" :src=videoFocus frameborder="0" allowfullscreen></iframe>
+                <iframe title="vimeo-player" :src=videoFocus frameborder="0" allowfullscreen :key="index"></iframe>
             </div>
         </div>
 
         <div class="contenedor">
-            <div class="gallery-container" :class="video.h + ' ' + video.w" v-for="video in videosHardcodeados"
+            <div class="gallery-container" :class="video.h + ' ' + video.w" :id="'id'+video.id" v-for="(video, index) in videosHardcodeados"
                 @click="openFullVideo(video)">
                 <div class="gallery-item">
                     <div class="image">
