fix gallery img

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                     </div>
-                    <div class="carousel-item" v-for="img in imagenes" :style="'background-image:url('+img.url+');'">
+                    <div class="carousel-item" v-for="img in imagenesCarrousel" :style="'background-image:url('+img.url+');'">
                     </div>
                 </div>
 
