--- a/sobreMi.html
+++ b/sobreMi.html
@@ -62,7 +62,7 @@
 
         <div class="mainText">
             <p>Bienvenido</p>
-            <h1>Soy <span>Carlos</span>, Fotografo y Director</h1>
+            <h1>Soy <span>Carlos</span>, Fotografo y Director de Fotografia</h1>
         </div>
 
         <div class="mainContent">
